--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "respository": {
     "type": "git",
-    "url": "git+https://github.com/hodanyusuff/hw3.week-7.git"
+    "url": "https://github.com/hodanyusuff/CSC3916_HW4.git"
   },
   "keywords": [
     "movie"
